--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                                              <div class="col-3 d-md-none d-block"></div>
                                               <div class="col-md-2 col-6">
                                                 <img src="https://play-lh.googleusercontent.com/6aip6cA1FpuPr2xNbunIOph5L3jp_CF2FfoVwYlYSsdkrZdPAKO_oTw1gPTiBhPDwrU=w240-h480-rw" class="img-fluid">
-                                                 <p class="m-0 p-0 text-center"><a style="font-size: 12px;" class="btn btn-danger my-3 " href="#">DOWNLOAD</a></p> 
+                                                 <p class="m-0 p-0 text-center"><a style="font-size: 12px;" class="btn btn-danger my-3 " href="https://play.google.com/store/apps/details?id=com.fnzn.app&referrer=495">DOWNLOAD</a></p> 
                                                   <ul style="font-size: 14px;" class="text-center"> 
                                                     <li><i class="fa fa-star yes" aria-hidden="true"></i></li>
                                                     <li><i class="fa fa-star yes" aria-hidden="true"></i></li>
@@ -723,7 +723,7 @@
                                                     <p class="mt-3 mb-0" style="font-weight: bold;">Verson</p>
                                                     <p style="font-size: 14px;">5.0</p>
                                                     <p class="m-0" style="font-weight: bold;">Get it on</p>
-                                                    <a href="#"><img style="width: 80px;height: 40px;" src="https://assets.stickpng.com/images/5a902dbf7f96951c82922875.png" alt="GooglePlaystore" class="img-fluid"></a>
+                                                    <a href="https://play.google.com/store/apps/details?id=com.fnzn.app&referrer=495"><img style="width: 80px;height: 40px;" src="https://assets.stickpng.com/images/5a902dbf7f96951c82922875.png" alt="GooglePlaystore" class="img-fluid"></a>
                                                   </div>
                                                 </div>
                                               </div>
