--- a/contactUs.html
+++ b/contactUs.html
@@ -26,7 +26,7 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">Best Earning Apps</a>
             </li>
             <li class="nav-item">
@@ -34,7 +34,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">News</a>
-            </li>
+            </li> -->
             <li class="nav-item">
              
               <div class="dropdown">
